--- a/analisis1.ipynb
+++ b/analisis1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8ISdwm1K2v/GzTsSYvv8K",
+      "authorship_tag": "ABX9TyOYRc7k0R9JAp39vfCaLVVM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ypC57n0ww0_m"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = 'https://gist.githubusercontent.com/ahcamachod/9be09de793dc3bf1e6c3d98eb4e5b1ef/raw/21b85572693200040e11284ef6dcfc3457ec8e11/citrus.csv'\n",
+        "np.arange(1,6,1)"
+      ],
+      "metadata": {
+        "id": "fTrmIHvH5MY2",
+        "outputId": "bf65bf59-d06d-4249-d08c-ee3fc376d748",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.loadtxt(url, delimiter=\",\", usecols = np.arange(1,6,1), skiprows = 1)"
+      ],
+      "metadata": {
+        "id": "6_crYhe-8hUF",
+        "outputId": "3d6eda1f-5de6-4589-8560-2a65e0c8c633",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  2.96,  86.76, 172.  ,  85.  ,   2.  ],\n",
+              "       [  3.91,  88.05, 166.  ,  78.  ,   3.  ],\n",
+              "       [  4.42,  95.17, 156.  ,  81.  ,   2.  ],\n",
+              "       ...,\n",
+              "       [ 15.59, 256.5 , 168.  ,  82.  ,  20.  ],\n",
+              "       [ 15.92, 260.14, 142.  ,  72.  ,  11.  ],\n",
+              "       [ 16.45, 261.51, 152.  ,  74.  ,   2.  ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     }
   ]
 }
