--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/AndresCMontejo/numpy_proyecto/blob/main/numpy.ipynb",
-      "authorship_tag": "ABX9TyPFrfij/A0kTQ220MOn90nb",
+      "authorship_tag": "ABX9TyNcHdZW9z0vX4qFztWMm6t+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1421,11 +1421,11 @@
         "print(f\"La pendiente es: {a}\\n La intersección es: {b}\")"
       ],
       "metadata": {
-        "id": "_wI2Igfg0N6s",
-        "outputId": "6ddcaf8b-df24-48f0-f2e5-a5f5cb367bce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_wI2Igfg0N6s",
+        "outputId": "6ddcaf8b-df24-48f0-f2e5-a5f5cb367bce"
       },
       "execution_count": 40,
       "outputs": [
@@ -1455,11 +1455,11 @@
         "y"
       ],
       "metadata": {
-        "id": "-DGfykCJ0kvS",
-        "outputId": "1b351ee0-5bd3-443c-83e2-780a7773fb0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-DGfykCJ0kvS",
+        "outputId": "1b351ee0-5bd3-443c-83e2-780a7773fb0a"
       },
       "execution_count": 43,
       "outputs": [
@@ -1502,11 +1502,11 @@
         "np.linalg.norm(Moscu - y)"
       ],
       "metadata": {
-        "id": "3fdoBhJK1gtq",
-        "outputId": "de76341b-d685-46e9-c713-001c273c1856",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3fdoBhJK1gtq",
+        "outputId": "de76341b-d685-46e9-c713-001c273c1856"
       },
       "execution_count": 44,
       "outputs": [
@@ -1531,12 +1531,12 @@
         "plt.plot(75, a*75 + b, '*r')  #especificamos en el mes 75"
       ],
       "metadata": {
-        "id": "RkBSoPth2PYR",
-        "outputId": "2456ac04-f9bb-47a6-b326-b0b79fabf0e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        }
+        },
+        "id": "RkBSoPth2PYR",
+        "outputId": "2456ac04-f9bb-47a6-b326-b0b79fabf0e6"
       },
       "execution_count": 48,
       "outputs": [
@@ -1568,11 +1568,11 @@
         "a*25 + b #si utilizamos esta pequeña formula, nos dará el precio especifico de la fruta en ese mes y año en especifico."
       ],
       "metadata": {
-        "id": "SzNM3sjw4mQj",
-        "outputId": "c25c20d7-a0ef-4e67-b95d-d4f13908f7aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SzNM3sjw4mQj",
+        "outputId": "c25c20d7-a0ef-4e67-b95d-d4f13908f7aa"
       },
       "execution_count": 50,
       "outputs": [
@@ -1594,11 +1594,11 @@
         "a*75 + b"
       ],
       "metadata": {
-        "id": "weE_oa_s5XiE",
-        "outputId": "5962306d-c6cf-49dd-ed79-3b5e406794e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "weE_oa_s5XiE",
+        "outputId": "5962306d-c6cf-49dd-ed79-3b5e406794e4"
       },
       "execution_count": 51,
       "outputs": [
@@ -1613,6 +1613,148 @@
           "execution_count": 51
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "VALORES ALEATORIOS"
+      ],
+      "metadata": {
+        "id": "6JNmzqACMrbQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Entero\n",
+        "np.random.randint(40,100,100)"
+      ],
+      "metadata": {
+        "id": "vNUmhZUBMuPQ",
+        "outputId": "50effff6-d07e-4b50-be7b-0b0f31bd7686",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([78, 45, 49, 82, 62, 45, 74, 56, 51, 83, 72, 51, 52, 44, 52, 46, 83,\n",
+              "       63, 60, 62, 67, 87, 83, 54, 71, 98, 73, 93, 71, 71, 98, 48, 96, 85,\n",
+              "       44, 61, 41, 78, 41, 92, 95, 94, 74, 71, 45, 60, 45, 42, 42, 61, 52,\n",
+              "       89, 49, 73, 66, 67, 77, 65, 55, 92, 63, 69, 75, 66, 49, 82, 41, 74,\n",
+              "       93, 94, 64, 45, 74, 45, 46, 54, 88, 69, 62, 46, 85, 86, 74, 63, 66,\n",
+              "       55, 64, 66, 90, 54, 89, 74, 80, 78, 89, 95, 67, 47, 72, 46])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Decimal\n",
+        "np.random.uniform(0.1,0.9,100)"
+      ],
+      "metadata": {
+        "id": "vbmo9lKwNKAo",
+        "outputId": "1087b598-8d6b-4a58-dc0f-3d2a0daf4838",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.7090152 , 0.84109893, 0.18406604, 0.23424576, 0.64635697,\n",
+              "       0.24442359, 0.67669488, 0.37377921, 0.5714369 , 0.65218103,\n",
+              "       0.25222646, 0.3921406 , 0.16265302, 0.25651707, 0.47206743,\n",
+              "       0.30358127, 0.27498879, 0.16385735, 0.15336599, 0.11263848,\n",
+              "       0.18834914, 0.85852193, 0.65170383, 0.31583562, 0.56993402,\n",
+              "       0.36787774, 0.43001748, 0.32729874, 0.40335598, 0.89288095,\n",
+              "       0.23291084, 0.66785382, 0.4862282 , 0.78848142, 0.20868768,\n",
+              "       0.11633277, 0.48475024, 0.79148051, 0.86467013, 0.4354254 ,\n",
+              "       0.62534179, 0.20647851, 0.6683779 , 0.76699213, 0.35013113,\n",
+              "       0.34905177, 0.32818703, 0.47509242, 0.36730985, 0.49215356,\n",
+              "       0.14180484, 0.85587259, 0.69352929, 0.34860121, 0.35825422,\n",
+              "       0.69215447, 0.7949647 , 0.62823495, 0.60467243, 0.4868641 ,\n",
+              "       0.42745109, 0.53134492, 0.14116409, 0.67282829, 0.58088672,\n",
+              "       0.48101119, 0.39052231, 0.51138822, 0.16441158, 0.54854211,\n",
+              "       0.28338585, 0.61595689, 0.18432207, 0.53758376, 0.19726221,\n",
+              "       0.44009555, 0.56414245, 0.37318655, 0.70815383, 0.37336382,\n",
+              "       0.18166414, 0.23839057, 0.83261232, 0.43952175, 0.28193496,\n",
+              "       0.85153048, 0.63031606, 0.84753586, 0.81317789, 0.71217692,\n",
+              "       0.71374769, 0.79041221, 0.66313353, 0.68500224, 0.44192225,\n",
+              "       0.52049167, 0.65686602, 0.1873644 , 0.18160238, 0.37269762])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pendientes = np.random.uniform(0.1,0.9,100)\n",
+        "pendientes"
+      ],
+      "metadata": {
+        "id": "XQT67bsBOKiL",
+        "outputId": "7226afd8-42c1-428e-ce8b-6779c5167a0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.52264877, 0.29741705, 0.78685913, 0.11354409, 0.43610688,\n",
+              "       0.22294354, 0.61318034, 0.69500517, 0.79875596, 0.26267091,\n",
+              "       0.26089307, 0.83099978, 0.48384615, 0.72019481, 0.22678074,\n",
+              "       0.5972714 , 0.47458983, 0.78648226, 0.38173357, 0.85974904,\n",
+              "       0.82797071, 0.69932294, 0.19206291, 0.2673727 , 0.402419  ,\n",
+              "       0.28804962, 0.72321505, 0.61143129, 0.2051544 , 0.46054279,\n",
+              "       0.4065458 , 0.22898127, 0.48302066, 0.52602984, 0.11015343,\n",
+              "       0.78327759, 0.58479207, 0.74624835, 0.13158886, 0.72420435,\n",
+              "       0.70380532, 0.40901582, 0.72993986, 0.66972313, 0.35290173,\n",
+              "       0.81727282, 0.69261556, 0.28439369, 0.78111852, 0.31290054,\n",
+              "       0.23870037, 0.44015181, 0.68675666, 0.14880576, 0.82972707,\n",
+              "       0.25392074, 0.14012783, 0.44713183, 0.28517957, 0.33674537,\n",
+              "       0.34130541, 0.86860991, 0.59007077, 0.50100993, 0.21367293,\n",
+              "       0.39670243, 0.79400827, 0.34022122, 0.39230565, 0.59481981,\n",
+              "       0.29203651, 0.73486323, 0.7902396 , 0.61245241, 0.66467055,\n",
+              "       0.53005142, 0.83176601, 0.79166399, 0.62484599, 0.82347619,\n",
+              "       0.8395019 , 0.72291102, 0.30405786, 0.78685822, 0.80400283,\n",
+              "       0.2252251 , 0.38817236, 0.63105629, 0.35008192, 0.86657103,\n",
+              "       0.75064737, 0.37236826, 0.11322498, 0.76172541, 0.55693675,\n",
+              "       0.12173161, 0.64595354, 0.78936027, 0.38937401, 0.38009612])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "L8oxOGxnOs9I"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
